# realsense_gazebo_plugin

./: CMakeLists.txt  README.md  package.xml
include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
models/realsense_camera/: model.sdf  model.sdf.erb
src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
